--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "passport-local": "^1.0.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "serve-favicon": "~2.3.0",
-    "socket.io": "^1.7.3",
-    "react-router": "3.0.1"
+    "socket.io": "^1.7.3"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
