--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "webpack --watch"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "body-parser": "~1.15.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
@@ -24,9 +25,12 @@
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "react": "^15.5.4",
+    "react-cookie": "^2.0.7",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.7.3"
   },
@@ -36,6 +40,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.1",
+    "react-bootstrap": "^0.31.0",
+    "react-masonry-component": "^5.0.5",
+    "react-router-bootstrap": "^0.24.2",
     "style-loader": "^0.17.0",
     "webpack": "^2.5.0",
     "webpack-dev-server": "^2.4.5"
